<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingTop="16dp">

    <LinearLayout
        android:id="@+id/baseLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/baseLinear"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out"
            android:textColor="@color/white"
            android:textSize="8sp" />
    </LinearLayout>


</RelativeLayout>


<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="@dimen/nav_header_height"-->
<!--    android:background="@drawable/side_nav_bar"-->
<!--    android:gravity="bottom"-->
<!--    android:orientation="vertical"-->
<!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--    android:paddingTop="@dimen/activity_vertical_margin"-->
<!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--    android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--    android:theme="@style/ThemeOverlay.AppCompat.Dark">-->

<!--    -->

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/nav_header_desc"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--        app:srcCompat="@mipmap/ic_launcher_round" />-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
<!--        android:text="@string/nav_header_title"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/nav_header_subtitle" />-->
<!--</LinearLayout>-->